--- a/app/views/listings/recurring_bookings/review.html.haml
+++ b/app/views/listings/recurring_bookings/review.html.haml
@@ -2,10 +2,7 @@
 
 .row-fluid
   .span8.offset2
-    .header
-      %h1= t 'reservations_review.heading'
-      %p.location-name= @recurring_booking_request.listing.name
-      %p.location-address= @recurring_booking_request.location.address
+    = render 'header', listing: @recurring_booking_request.listing, location: @recurring_booking_request.location
 
     .box
       %h2
