--- a/app/views/locations/_social_buttons.html.haml
+++ b/app/views/locations/_social_buttons.html.haml
@@ -18,7 +18,7 @@
   .social-buttons
 
     .twitter
-      = link_to "Tweet", "https://twitter.com/share", :class => "twitter-share-button", :'data-text' => location.name, :'data-url' => url
+      = render 'locations/twitter_social_button', location: location
       %script
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 
