NM-2909 Added empty result sets messages to user profile. See more text now has correct letter spacing

--- a/app/assets/stylesheets/intel/modules/_common.scss
+++ b/app/assets/stylesheets/intel/modules/_common.scss
@@ -66,6 +66,13 @@
     }
 }
 
+.empty-resultset {
+    margin: 30px 0;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+}
+
 
 /* responsive map */
 
