--- a/app/community_views/shared/_listing_projects.html.haml
+++ b/app/community_views/shared/_listing_projects.html.haml
@@ -1,9 +1,12 @@
-/ grid
-.grid-a-search-a
-  .wrap
-    - projects.each do |project|
-      = render 'shared/project', project: project
+- if projects.empty?
+  %p.empty-resultset= t('user_profile.empty_resultset.projects')
+- else
+  / grid
+  .grid-a-search-a
+    .wrap
+      - projects.each do |project|
+        = render 'shared/project', project: project
 
-    / more
-    %p.more-a{:'data-see-more' => true, :'data-see-more-type' => see_more_type}
-      = link_to t(:see_more), see_more_route, remote: true
+  / more
+  %p.more-a{:'data-see-more' => true, :'data-see-more-type' => see_more_type}
+    = link_to t(:see_more), see_more_route, remote: true
