--- a/app/assets/stylesheets/intel/modules/_flash-messages.scss
+++ b/app/assets/stylesheets/intel/modules/_flash-messages.scss
@@ -18,7 +18,6 @@
 
 .alert {
     margin: 0;
-    // transition: all .3s ease;
     overflow: hidden;
 
     .contain {
@@ -26,18 +25,25 @@
         padding-top: 20px;
         padding-bottom: 20px;
         font-size: 20px;
-        text-align: center;
     }
 
     .close {
         vertical-align: middle;
-        margin-left: 20px;
+        margin-left: 30px;
         padding: 0;
         background: none;
         text-align: center;
         border: none;
         font-size: 16px;
         color: inherit;
+    }
+
+    ul {
+        margin-bottom: 0;
+    }
+
+    li + .close, ul + .close {
+        margin-left: 0;
     }
 
     @include alert-color(error, #f00, #fff);
