--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,7 +1,13 @@
-<% if @comment.errors.present? %>
-  $('[data-new-comment]').parents(".control-group").addClass("error")
-<% else %>
-  $('[data-new-comment]').parents(".control-group").removeClass("error")
-  $('[data-comments]').prepend('<%= escape_javascript( render @comment ) %>');
-  $('[data-new-comment]').val('')
-<% end %>
+(function(){
+    'use strict';
+    var commentField = $('[data-new-comment-for="<%= @comment.commentable.id  %>"]');
+    var comments = $('[data-comments-for="<%= @comment.commentable.id  %>"]');
+
+    <% if @comment.errors.present? %>
+        commentField.parents(".control-group").addClass("error")
+    <% else %>
+        commentField.val('').parents(".control-group").removeClass("error")
+        comments.prepend('<%= escape_javascript( render @comment ) %>');
+    <% end %>
+
+}());
