--- a/app/community_views/dashboard/projects/_link_fields.html.haml
+++ b/app/community_views/dashboard/projects/_link_fields.html.haml
@@ -1,4 +1,4 @@
-.link
+.link.nested-fields{data: { :'link-wrapper' => true }}
   - if f.object.url.present?
     .link-preview
       - if f.object.image.present?
@@ -27,7 +27,7 @@
         %span.intelicon-edit
         = t('edit', default: 'Edit')
 
-    = link_to_remove_association f, class: 'button-a small red', :"data-link-remove" => true do
+    = link_to_remove_association f, class: 'button-a small red' do
       %span.intelicon-trash-outlined
       = t('remove', default: 'Remove')
 
