NM-2844 keep link image if validation fails

--- a/app/community_views/dashboard/projects/_link_fields.html.haml
+++ b/app/community_views/dashboard/projects/_link_fields.html.haml
@@ -20,6 +20,7 @@
       %span.or
         = t :or
       = f.input :image, as: :file, input_html: { accept: "image/*", capture: "capture" }
+      = f.input :image_cache, as: :hidden
 
   .fieldset-actions
     - if f.object.url.present?
