--- a/app/community_views/dashboard/projects/index.html.haml
+++ b/app/community_views/dashboard/projects/index.html.haml
@@ -42,7 +42,7 @@
                 %td.col-name
                   = link_to project.name, project_path(project)
                 %td.col-summary
-                  = project.description
+                  = project.summary
                 %td.col-role
                   = t(project.creator_id == current_user.id ? :owner : :collaborator)
                 %td.col-status
