--- a/app/community_views/search/filters/_people.html.haml
+++ b/app/community_views/search/filters/_people.html.haml
@@ -5,7 +5,7 @@
         = t :filter_by
       = f.input :role, as: :select, multiple: true, input_html: { class: 'selectize', multiple: true }, collection: CustomAttributes::CustomAttribute.where(target: InstanceProfileType.first, name: 'role').first.try(:valid_values_translated), wrapper_html: { class: 'drop role' }, required: false, selected: params[:role]
 
-      = f.input :topic_ids, as: :select, multiple: true, input_html: { class: 'selectize', multiple: true }, collection: Topic.pluck(:name), wrapper_html: { class: 'drop topics' }, required: false, selected: params[:topic_ids]
+      = f.input :topic_ids, as: :select, multiple: true, input_html: { class: 'selectize', multiple: true }, collection: Topic.pluck(:name, :id), wrapper_html: { class: 'drop topics' }, required: false, selected: params[:topic_ids]
       = f.input :query, as: :hidden, input_html: { value: params[:query] }
       = f.input :page, as: :hidden, input_html: { value: params[:page] }
       = f.input :search_type, as: :hidden, input_html: { value: 'people' }
@@ -15,4 +15,4 @@
         %span= @searcher.result_count
         = t :results_count
 
-      = f.input :sort, as: :select, collection: ['Featured', 'People I know', 'Most Popular', 'Distance', 'Number of Projects'], input_html: { class: 'selectize', data: { placeholder: t(:sort, scope: [:simple_form, :placeholders, :search_filter] )}}, wrapper_html: { class: 'sort' }, selected: params[:sort]
+      = f.input :sort, as: :select, collection: ['All', 'Featured', 'People I know', 'Most Popular', 'Distance', 'Number of Projects'], prompt: t(:sort, scope: [:simple_form, :placeholders, :search_filter]), input_html: { class: 'selectize'}, wrapper_html: { class: 'sort' }, selected: params[:sort]
