NM-2918 Social Integrations will be working thorougly
Social integrations were once again tested. LinkedIn had to be
revamped due to introduced restrictions to their API. Google
integration has been introduced.

Resolves: #NM-2918

--- a/app/community_views/onboarding/integrations.html.haml
+++ b/app/community_views/onboarding/integrations.html.haml
@@ -7,8 +7,7 @@
       .connect-a
         %ul
           - @supported_providers.each do |provider|
-            -# dirty hack for google_oauth2 provider
-            %li{class: provider.split("_")[0].downcase}
+            %li{class: provider.downcase}
               %span
                 = t :connect_with_service, service: provider
               = build_link_for(provider, "button-a white").html_safe
