--- a/app/community_views/shared/_topnav.html.haml
+++ b/app/community_views/shared/_topnav.html.haml
@@ -44,13 +44,10 @@
             = link_to t(:account), dashboard_profile_path
           %li
             = link_to t(:log_out), destroy_user_session_path, method: :delete
-
+    - else
       %p.actions
         - if (project_type = ProjectType.first).present?
           = link_to t(:add_project), new_dashboard_project_type_project_path(project_type), class: 'button-a small orange add'
         - else
           = link_to "ADD PROJECT TYPE IN INSTANCE ADMIN", new_instance_admin_projects_project_type_path, class: 'button-a small orange add'
-
-    - else
-      %p.actions
-        = link_to t(:log_in), '/auth/saml?wizard=onboarding', class: 'button-a small orange'
+        = link_to t(:log_in), new_user_session_path(wizard: :onboarding), class: 'button-a small orange'
