--- a/app/views/instance_admin/settings/integrations/show.html.haml
+++ b/app/views/instance_admin/settings/integrations/show.html.haml
@@ -23,6 +23,13 @@
 
   .content-container
     %h4
+      = t('instance_admin.settings.configuration.user_authorization')
+    .row
+      .input-container.col-xs-12
+        = f.input :default_oauth_signin_provider, collection: Authentication::ALLOWED_LOGIN_PROVIDERS.map(&:downcase), input_html: { class: 'form-control' }, required: false
+
+  .content-container
+    %h4
       = t('instance_admin.settings.integrations.webhook_token')
     .row
       .input-container.col-xs-6
