--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,7 +1,7 @@
 %article.status-a{"data-comment-id": comment.id}
   %header
     %figure
-      = image_tag comment.creator.avatar.url(:thumb), width: 80, height: 80
+      = image_tag comment.creator.avatar.url(:thumb)
     %p.desc
       = link_to comment.creator.decorate.secret_name, profile_path(comment.creator)
     %p.meta
