--- a/app/community_views/shared/_follow_button.html.haml
+++ b/app/community_views/shared/_follow_button.html.haml
@@ -1,9 +1,9 @@
-- css_class ||= "small"
-- global_options = { class: "button-a #{css_class}" }
+- if current_user != object
+  - css_class ||= "small"
+  - global_options = { class: "button-a #{css_class}" }
+  - if user_signed_in?
+    - options = { remote: true, data: { "object-id": object.id }, method: current_user.feed_follow_http_method(object)}.merge(global_options)
 
-- if user_signed_in?
-  - options = { remote: true, data: { "object-id": object.id }, method: current_user.feed_follow_http_method(object)}.merge(global_options)
-
-  = link_to current_user.feed_follow_term(object), current_user.feed_follow_url(object), options
-- else
-  = link_to I18n.t('activity_feed.verbs.follow'), new_user_session_path, global_options
+    = link_to current_user.feed_follow_term(object), current_user.feed_follow_url(object), options
+  - else
+    = link_to I18n.t('activity_feed.verbs.follow'), new_user_session_path, global_options
