--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -91,14 +91,14 @@
     <div class="topics-a">
       <div class="wrap">
         <ul class="a">
-          <li class="big"><a href="{{ topics[0].show_url }}" style="background-image: url({{  topics[0].cover_image_big | image_url }})"><span>{{ topics[0].name }}</span></a></li>
-          <li><a href="{{ topics[1].show_url }}" style="background-image: url({{ topics[1].cover_image | image_url }})"><span>{{ topics[1].name }}</span></a></li>
-          <li><a href="{{ topics[2].show_url }}" style="background-image: url({{ topics[2].cover_image | image_url }})"><span>{{ topics[2].name }}</span></a></li>
+          <li class="big"><a href="{{ topics[0].show_url }}" style="{{ topics[0].background_style_big }}"><span>{{ topics[0].name }}</span></a></li>
+          <li><a href="{{ topics[1].show_url }}" style="{{ topics[1].background_style }}"><span>{{ topics[1].name }}</span></a></li>
+          <li><a href="{{ topics[2].show_url }}" style="{{ topics[2].background_style }}"><span>{{ topics[2].name }}</span></a></li>
         </ul>
         <ul class="b">
-          <li><a href="{{ topics[3].show_url }}" style="background-image: url({{ topics[3].cover_image | image_url }})"><span>{{ topics[3].name }}</span></a></li>
-          <li><a href="{{ topics[4].show_url }}" style="background-image: url({{ topics[4].cover_image | image_url }})"><span>{{ topics[4].name }}</span></a></li>
-          <li class="big"><a href="{{ topics[5].show_url }}" style="background-image: url({{  topics[5].cover_image_big | image_url }})"><span>{{ topics[5].name }}</span></a></li>
+          <li><a href="{{ topics[3].show_url }}" style="{{ topics[3].background_style }}"><span>{{ topics[3].name }}</span></a></li>
+          <li><a href="{{ topics[4].show_url }}" style="{{ topics[4].background_style }}"><span>{{ topics[4].name }}</span></a></li>
+          <li class="big"><a href="{{ topics[5].show_url }}" style="{{ topics[5].background_style_big }}"><span>{{ topics[5].name }}</span></a></li>
         </ul>
       </div>
     </div>
