--- a/app/community_views/registrations/show.html.haml
+++ b/app/community_views/registrations/show.html.haml
@@ -28,7 +28,7 @@
         %li
           = link_to '#projects', role: "tab", :'data-toggle' => "tab" do
             = t :projects
-            %small= "(#{@user.all_projects.count})"
+            %small= "(#{@all_projects.total_count})"
       %p
         - if current_user.try(:id) == resource.id
           = link_to t(:edit), dashboard_profile_path, class: 'button-a small'
@@ -43,44 +43,12 @@
     = render 'show_activity', object: @user, feed: @feed
 
   #following.tab-pane.fade{:role => "tabpanel"}
-    / content wrapper
-    .wrap-a.reduce-top
-      .contain
-        / tabs
-        %nav.tabs-a.trio
-          %ul.nav.nav-tabs{role: "tablist"}
-            %li.active
-              = link_to '#following-people', role: "tab", :'data-toggle' => "tab" do
-                = t :people
-                %small= "(#{@users_followed.total_entries})"
-            %li
-              = link_to '#following-projects', role: "tab", :'data-toggle' => "tab" do
-                = t :projects
-                %small= "(#{@projects_followed.total_entries})"
-            %li
-              = link_to '#following-topics', role: "tab", :'data-toggle' => "tab" do
-                = t :topics
-                %small= "(#{@topics_followed.total_entries})"
-        / white box
-        .box-a
-          = simple_form_for :search_filter, url: root_url do |f|
-            .filters-a
-              .results
-                = f.input :sort, as: :select, collection: ['Name', 'Date'], input_html: { class: 'selectize', data: { placeholder: t(:sort, scope: [:simple_form, :placeholders, :search_filter] )}}, wrapper_html: { class: 'sort' }
-
-          .tab-content
-            #following-people.tab-pane.fade.active
-              = render "shared/listing_people", users: @users_followed, see_more_type: "followingPeople", see_more_route: see_more_following_people_path(id: @user.id, type: @user.class.name)
-            #following-projects.tab-pane.fade
-              = render "shared/listing_projects", projects: @projects_followed, see_more_type: "followingProjects", see_more_route: see_more_following_projects_path(id: @user.id, type: @user.class.name)
-            #following-topics.tab-pane.fade
-              = render "shared/listing_topics", topics: @topics_followed
-
+    = render 'show_following', object: @user
 
   #followers.tab-pane.fade{:role => "tabpanel"}
     .wrap-a.reduce-top
       .contain
-        .box-a= render 'shared/show_followers', object: @user
+        .box-a= render 'shared/show_followers', container: '#followers', see_more_route: see_more_followers_path(id: @user.id, type: 'User', container: '#followers'), collection: @followers
 
   #projects.tab-pane.fade{:role => "tabpanel"}
     / content wrapper
@@ -88,11 +56,5 @@
       .contain
         / white box
         .box-a
-          = simple_form_for :search_filter, url: root_url do |f|
-            .filters-a
-              .results
-                = f.input :sort, as: :select, collection: ['Name', 'Date'], input_html: { class: 'selectize', data: { placeholder: t(:sort, scope: [:simple_form, :placeholders, :search_filter] )}}, wrapper_html: { class: 'sort' }
-
-          = render 'shared/listing_projects', projects: @all_projects, see_more_type: "projects", see_more_route: see_more_projects_path(id: @user.id, type: @user.class.name)
-
+          = render 'shared/show_projects', projects: @all_projects, container: '#projects', see_more_route: see_more_projects_path(id: @user.id, type: @user.class.name, container: '#projects')
 
