--- a/app/community_views/shared/_listing_topics.html.haml
+++ b/app/community_views/shared/_listing_topics.html.haml
@@ -4,11 +4,10 @@
   - hide_more = false if local_assigns[:hide_more].nil?
 
   .grid-a-search-a
-    .wrap
+    .wrap.content-container
       - topics.each do |topic|
         = render 'shared/topic', topic: topic
 
   /more
-  - if topics.next_page
-    %p.more-a{:'data-see-more' => true, :'data-see-more-type' => "projects"}
-      = link_to t(:see_more), see_more_following_topics_path(id: @user.id, type: @user.class.name), remote: true
+  %p.more-a{:'data-see-more' => true, class: "#{topics.next_page ? '' : 'hide-initially'}"}
+    = link_to t(:see_more), see_more_following_topics_path(id: @user.id, type: @user.class.name), remote: true, data: { next_page: topics.next_page }
