--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -17,7 +17,7 @@
       %span &bull;
       - if report = comment.reported_by(current_user, request.remote_ip)
         = link_to t(:cancel_spam_report), url_for([comment.commentable, comment, report]), remote: true, method: :delete
-      - else
+      - elsif current_user
         = link_to t(:report_as_spam), url_for([comment.commentable, comment, comment.spam_reports.build]), remote: true, method: :post
 
       - if comment.can_remove?(current_user)
