--- a/app/assets/stylesheets/intel/modules/_status-update.scss
+++ b/app/assets/stylesheets/intel/modules/_status-update.scss
@@ -95,6 +95,14 @@
             margin-top: 20px;
             padding-top: 25px;
             border-top: 1px solid #e5e5e5;
+
+            &:empty {
+                display: none;
+            }
+        }
+
+        .aligncenter:empty {
+            display: none;
         }
     }
 
