--- a/app/views/instance_admin/projects/topics/_form.html.haml
+++ b/app/views/instance_admin/projects/topics/_form.html.haml
@@ -7,7 +7,7 @@
       = f.input :featured, input_html: { class: 'checkbox' }
   .row
     .input-container.col-xs-12
-      = f.input :description,  :as => :ckeditor, input_html: { class: 'form-control' }
+      = f.input :description, input_html: { class: 'form-control' }
   .row
     .input-container.col-xs-12
       = f.input :image, input_html: { class: 'form-control' }
