Cover image edition in onboarding looks approprietly
Cover image edition have updated layout, consistent with layout in
Edit Profile page.

Resolves: NM-2948

--- a/app/community_views/onboarding/finish.html.haml
+++ b/app/community_views/onboarding/finish.html.haml
@@ -11,49 +11,55 @@
         %p
           = t :more_info, scope: [:onboarding]
 
-        / = f.input :avatar, as: :photo_upload, wrapper_html: { class: 'sep' }, required: false
-        / = f.input :cover_image, as: :photo_upload, wrapper_html: { class: 'sep' }, required: false
-        .row{:class => ('error' if f.object.errors[:cover_image].present?)}
-          .col-md-3
-            = f.label :cover_image
-          .col-md-9
-            - if is_i18n_set?('forms.hints.user_form.cover_image')
-              %p.photo-uploader-hint
-                = t('forms.hints.user_form.cover_image')
-            .col-md-4
-              .single-photo
-                = new_file_upload_input("cover_image",
-                  cover_image_path,
-                  @user.cover_image.thumbnail_dimensions[:thumbnail],
-                  "Upload Photo",
-                  "no-multiple" => true,
-                  :error => f.object.errors.include?(:avatar).present? ? "Please upload avatar." : nil) do
-                  - if current_user.attributes['avatar']
-                    = fileupload_photo(@user.cover_image_url,
-                      destroy_cover_image_path,
-                      edit_cover_image_path,
-                      :div)
+        %fieldset.media-group.sep
+          %legend Cover Photo
 
-        .row{:class => ('error' if f.object.errors[:avatar].present?)}
-          .col-md-3
-            = f.label :avatar
-          .col-md-9
-            - if is_i18n_set?('forms.hints.user_form.avatar')
-              %p.photo-uploader-hint
-                = t('forms.hints.user_form.avatar')
-            .col-md-4
-              .single-photo
-                = new_file_upload_input("avatar",
-                  avatar_path,
-                  @user.avatar.thumbnail_dimensions[:community_thumbnail],
-                  "Upload Photo",
-                  "no-multiple" => true,
-                  :error => f.object.errors.include?(:avatar).present? ? "Please upload avatar." : nil) do
-                  - if current_user.attributes['avatar']
-                    = fileupload_photo(@user.avatar_url(:medium),
-                      destroy_avatar_path,
-                      edit_avatar_path,
-                      :div)
+          - if is_i18n_set?('forms.hints.user_form.cover_image')
+            %p.photo-uploader-hint
+              = t('forms.hints.user_form.cover_image')
+
+          .single-photo
+            = new_file_upload_input("cover_image",
+              cover_image_path,
+              @user.cover_image.thumbnail_dimensions[:thumbnail],
+              "Upload Photo",
+              "no-multiple" => true,
+              :error => f.object.errors.include?(:cover_image).present? ? "Please upload cover image." : nil) do
+              - if current_user.attributes['cover_image']
+
+                .photo-item{:id => "cover-photo-thumbnail"}
+                  = image_tag @user.cover_image_url
+                  .media-actions
+                    %button.button-a.small.action--edit{:type => "button", :data => { :"resize-photo" => true, :modal => true, :href => edit_cover_image_path }, :title => t('forms.photos.collection.rotate_and_crop')}
+                      %span.intelicon-edit
+
+                    %button.button-a.small.red.action--remove{:type => "button", :data => { :"delete-photo" => true, :url => destroy_cover_image_path }, :title => t('forms.photos.collection.delete') }
+                      %span.intelicon-trash-outlined
+
+        %fieldset.media-group.sep
+          %legend Avatar
+
+          - if is_i18n_set?('forms.hints.user_form.avatar')
+            %p.photo-uploader-hint
+              = t('forms.hints.user_form.avatar')
+
+          .single-photo
+            = new_file_upload_input("avatar",
+              avatar_path,
+              @user.avatar.thumbnail_dimensions[:community_thumbnail],
+              "Upload Photo",
+              "no-multiple" => true,
+              :error => f.object.errors.include?(:avatar).present? ? "Please upload avatar." : nil) do
+              - if current_user.attributes['avatar']
+
+                .photo-item{:id => "cover-photo-thumbnail"}
+                  = image_tag @user.avatar_url(:medium)
+                  .media-actions
+                    %button.button-a.small.action--edit{:type => "button", :data => { :"resize-photo" => true, :modal => true, :href => edit_avatar_path }, :title => t('forms.photos.collection.rotate_and_crop')}
+                      %span.intelicon-edit
+
+                    %button.button-a.small.red.action--remove{:type => "button", :data => { :"delete-photo" => true, :url => destroy_avatar_path }, :title => t('forms.photos.collection.delete') }
+                      %span.intelicon-trash-outlined
 
       %p.action
         %button.button-a{type: "submit"}
