--- a/app/community_views/dashboard/projects/_form.html.haml
+++ b/app/community_views/dashboard/projects/_form.html.haml
@@ -5,7 +5,7 @@
     - if current_user.id == f.object.creator_id
       = f.input :name
 
-      = f.input :summary, as: :text, input_html: { cols: 40, rows: 4 }
+      = f.input :summary, as: :text, limit: 140, input_html: { maxlength: 140, cols: 40, rows: 4 }
 
     = f.input :description, as: :text, input_html: { cols: 40, rows: 8 }
 
