--- a/app/assets/javascripts/components/search_results_google_map_marker.js.coffee.erb
+++ b/app/assets/javascripts/components/search_results_google_map_marker.js.coffee.erb
@@ -9,7 +9,7 @@ class @SearchResultsGoogleMapMarker
   @markerOptions:
     hover:
       image:
-        url: '<%= asset_url('markers/marker-hover.svg') %>'
+        url: '<%= asset_url('markers/marker-hover.png') %>'
         size: new google.maps.Size(20,29)
         scaledSize: new google.maps.Size(20,29)
         origin: new google.maps.Point(0,0)
@@ -17,7 +17,7 @@ class @SearchResultsGoogleMapMarker
 
     default:
       image:
-        url: '<%= asset_url('markers/marker-default.svg') %>'
+        url: '<%= asset_url('markers/marker-default.png') %>'
         size: new google.maps.Size(20,29)
         scaledSize: new google.maps.Size(20,29)
         origin: new google.maps.Point(0,0)
@@ -26,7 +26,7 @@ class @SearchResultsGoogleMapMarker
   @markerPngOptions:
     hover:
       image: new google.maps.MarkerImage(
-        '<%= asset_url('markers/marker-hover.svg') %>',
+        '<%= asset_url('markers/marker-hover.png') %>',
         new google.maps.Size(40,57),
         new google.maps.Point(0,0),
         new google.maps.Point(10,29),
@@ -35,7 +35,7 @@ class @SearchResultsGoogleMapMarker
 
     default:
       image: new google.maps.MarkerImage(
-        '<%= asset_url('markers/marker-default.svg') %>',
+        '<%= asset_url('markers/marker-default.png') %>',
         new google.maps.Size(40,57),
         new google.maps.Point(0,0),
         new google.maps.Point(10,29),
