NM-2958 Save for later for projects

--- a/app/community_views/dashboard/projects/_form.html.haml
+++ b/app/community_views/dashboard/projects/_form.html.haml
@@ -89,7 +89,7 @@
 
   %p.action
 
-    - if f.object.new_record? || f.object.draft_at
+    - if f.object.new_record? || f.object.draft?
       = f.submit t(:save_for_later), name: 'save_for_later', class: 'button-a white'
 
       = f.submit t(:publish_project), name: 'submit', class: 'button-a'
