NM-2971 Two different types of comment views will now be used on comment tab and activity feed tab

--- a/app/community_views/comments/_activity_feed_comments.html.haml
+++ b/app/community_views/comments/_activity_feed_comments.html.haml
@@ -10,7 +10,9 @@
         = f.submit I18n.t('activity_feed.user_status_submit'), class: 'button-a tiny'
 
 - comments =  comment.commentable.comments.order("created_at DESC").paginate(page: 1, per_page: 10)
-.comments{ "data-comments-for": comment.commentable.id }= render comments
+.comments{ "data-comments-for": comment.commentable.id }<
+  - comments.each do |comment|
+    = render 'comments/activity_feed_comment', comment: comment
 
 .aligncenter
   - if comments.total_pages > comments.current_page
