--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -4,16 +4,14 @@
       = image_tag comment.creator.avatar.url(:thumb)
     %p.desc
       = link_to comment.creator.decorate.secret_name, profile_path(comment.creator)
-    %p.meta
-      %time= comment.created_at.strftime("%m/%d/%Y")
   %section
     %p
       = readmore(comment.body)
 
   %footer
     %p.actions
-      %time
-        = distance_of_time_in_words_or_date_in_time_zone(comment.created_at)
+      %time{datetime: comment.created_at.strftime('%Y-%m-%d %H:%M')}= I18n.l(comment.created_at, format: :date_time)
+
       %span &bull;
       - if report = comment.reported_by(current_user, request.remote_ip)
         = link_to t(:cancel_spam_report), url_for([comment.commentable, comment, report]), remote: true, method: :delete
