NM-2963 column for FAQ will not be displayed if there are no FAQ entries to display

--- a/app/views/support/tickets/index.html.haml
+++ b/app/views/support/tickets/index.html.haml
@@ -1,10 +1,14 @@
 .row-fluid.support
   .span8.offset2
-    %h1 Your Support Requests
-    .box
-      .tickets.list
-        = render @tickets
-      %a.load-links
+    %h1= t('support.user.tickets')
+
+    - if @tickets.length == 0
+      %p.empty-resultset= t('support.user.no_tickets')
+    - else
+      .box
+        .tickets.list
+          = render @tickets
+        %a.load-links
 
 - content_for :domready do
   new SupportTickets($('a.load-links'))
