--- a/app/views/support/dashboard/index.html.haml
+++ b/app/views/support/dashboard/index.html.haml
@@ -1,32 +1,44 @@
+- content_for :tickets do
+  %h2
+    = t('support.dashboard.tickets')
+  -if current_user
+    .tickets
+      - if @tickets.empty?
+        %p.empty-resultset= t('support.user.no_tickets')
+      - else
+        - @tickets.each do |ticket|
+          - ticket = ticket.decorate
+          .ticket
+            .question
+              = support_ticket_title(ticket)
+            - if ticket.target_rfq?
+              = link_to "#{t('reservations.rfq_short')} - #{ticket.target.name}", ticket.show_target_path
+            =render 'support/tickets/time', ticket: ticket
+
+    = link_to t('support.dashboard.view_all_tickets'), support_tickets_path, :class => 'view-all'
+  = link_to t('support.dashboard.open_a_ticket'), new_support_ticket_path, :class => "btn btn-green btn-large open"
+
 .row-fluid.support
   .span8.offset2
     %h1
       = t('support.dashboard.support')
-    .row-fluid
-      .span8
-        .box
-          - @faqs.each do |faq|
-            .faq.closed
-              .question
-                = faq.question.html_safe
-              .answer
-                = faq.answer.html_safe
-      .span4
-        %h2
-          = t('support.dashboard.tickets')
-        -if current_user
-          .tickets
-            - @tickets.each do |ticket|
-              - ticket = ticket.decorate
-              .ticket
-                .question
-                  = support_ticket_title(ticket)
-                - if ticket.target_rfq?
-                  = link_to "#{t('reservations.rfq_short')} - #{ticket.target.name}", ticket.show_target_path
-                =render 'support/tickets/time', ticket: ticket
 
-          = link_to t('support.dashboard.view_all_tickets'), support_tickets_path, :class => 'view-all'
-        = link_to t('support.dashboard.open_a_ticket'), new_support_ticket_path, :class => "btn btn-green btn-large open"
+    - if @faqs.empty?
+      = yield :tickets
+    - else
+
+      .row-fluid
+        .span8
+          .box
+            - @faqs.each do |faq|
+              .faq.closed
+                .question
+                  = faq.question.html_safe
+                .answer
+                  = faq.answer.html_safe
+        .span4
+          = yield :tickets
+
 
 - content_for :domready do
   $(document).ready(function() {new SupportFaq($('.box'));});
