--- a/app/views/support/dashboard/index.html.haml
+++ b/app/views/support/dashboard/index.html.haml
@@ -18,17 +18,14 @@
     = link_to t('support.dashboard.view_all_tickets'), support_tickets_path, :class => 'view-all'
   = link_to t('support.dashboard.open_a_ticket'), new_support_ticket_path, :class => "btn btn-green btn-large open"
 
-- content_for :support_copy do
-  = inject_content_holder 'Support'
-
 .row-fluid.support
   .span8.offset2
     %h1
       = t('support.dashboard.support')
 
-    - support_copy = yield :support_copy
+    - support_copy = inject_content_holder 'Support'
 
-    - if @faqs.empty? and support_copy.empty?
+    - if @faqs.empty? and !support_copy
       = yield :tickets
     - else
 
