--- a/app/assets/stylesheets/intel/modules/_projects.scss
+++ b/app/assets/stylesheets/intel/modules/_projects.scss
@@ -113,7 +113,7 @@
             right: 0;
             bottom: 0;
             width: 30px;
-            background: linear-gradient(90deg, transparent, #fff);
+            background: linear-gradient(90deg, rgba(#fff, 0), #fff);
         }
     }
 }
