NM-2979 Long link in description will not go outside of container

--- a/app/assets/stylesheets/intel/modules/_card-teaser.scss
+++ b/app/assets/stylesheets/intel/modules/_card-teaser.scss
@@ -108,6 +108,7 @@
         font-size: 18px;
         line-height: 1.3;
         font-weight: bold;
+        overflow: hidden;
     }
 
     .hx a {}
@@ -120,6 +121,7 @@
 
     p {
         margin-bottom: 15px;
+        overflow: hidden;
     }
 
     .user img {
