--- a/app/assets/stylesheets/intel/modules/_projects.scss
+++ b/app/assets/stylesheets/intel/modules/_projects.scss
@@ -13,8 +13,13 @@
 
     td, th {
         border: none;
-        padding: 20px 20px 20px 0;
-        vertical-align: top
+        padding: 20px 0;
+        vertical-align: top;
+        overflow: hidden;
+    }
+
+    td + td, th + th, td + th, th + td {
+        padding-left: 20px;
     }
 
     th {
