--- a/app/community_views/registrations/social_accounts.html.haml
+++ b/app/community_views/registrations/social_accounts.html.haml
@@ -9,7 +9,7 @@
         %li
           = link_to t(:edit_profile), dashboard_profile_path
         %li
-          = link_to t(:notifications), '#notifications'
+          = link_to t(:notifications), edit_dashboard_notification_preferences_path
         %li.is-active
           = link_to t(:social_accounts), social_accounts_path
 
