NM-2966, NM-2963, NM-2994, NM-2974 - minor bug fixes

--- a/app/community_views/shared/_activity_status_body.html.haml
+++ b/app/community_views/shared/_activity_status_body.html.haml
@@ -5,7 +5,7 @@
 - else
   - followed = event.followed
   - body = event.description
-  - image = (followed.try(:image).presence || followed.try(:avatar)).try(:url, :medium).presence
+  - image = image_for_followed(followed)
   - title = link_to event.name, followed
 
 %section
